--- a/config/database.yml
+++ b/config/database.yml
@@ -52,4 +52,4 @@ production:
   database: Makuake_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
-  production: /var/lib/mysql/mysql.sock
+  socket: /var/lib/mysql/mysql.sock
